[package]
name = "redis_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
redis = { version = "0.29", features = ["tokio-comp", "aio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

# API docs
utoipa = "5.3"
utoipa-swagger-ui = { version = "9.0", features = ["rocket"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
